# Voxx

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: requirements.txt  test_sidecars.py  transcribe.py  wake_word.py
src-tauri/src/: database.rs  focus.rs  lib.rs  main.rs  modes.rs  pipeline.rs  state.rs
src-tauri/src/commands/: audio.rs  diagnostics.rs  dictionary.rs  history.rs  mod.rs  preferences.rs  recording.rs
src/components/: Dashboard.tsx  Dictionary.tsx  FloatingOverlay.tsx  Modes.tsx  Settings.tsx  Stats.tsx  VoiceVisualizerCapsule.tsx
src/lib/: db.test.ts  db.ts  hotkeys.ts  modes.ts  pipelineStatus.test.ts  pipelineStatus.ts  tauri.ts
