[package]
name = "voxx"
version = "0.1.0"
description = "Voxx desktop voice-to-text app"
authors = ["Voxx"]
license = ""
repository = "https://github.com/Surge77/Voxx.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voxx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hound = "3"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
